--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>
+      <link href="styles/main.css" rel="stylesheet" />
       GodBot webpage!
     </title>
   </head>
