--- a/Page1.html
+++ b/Page1.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>Test Page 2!</title>
     <link href="styles/main.css" rel="stylesheet" />
     Test
   </head>
