--- a/Page1.html
+++ b/Page1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Test Page 2!</title>
-    <link href="styles/main.css" rel="stylesheet" />
+    <link href="styles/main2.css" rel="stylesheet" />
     Test
   </head>
   
