--- a/Page1.html
+++ b/Page1.html
@@ -8,8 +8,9 @@
   
    
   <body>
+    <h1>Page 1! ;D</h1>
      This is a test!
-    <br>Test2!
+    <li>Test2!</li>
     <li><a href="index.html">Home</a></li>
   </body>
 </html>
