--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <ul>
       <li><a href="Page1.html">page 1</a></li>
+      <li><a href="https://www.youtube.com/playlist?list=PLoYCgNOIyGAB_8_iq1cL8MVeun7cB6eNc">YT</a></li>
     </ul>
   </body>
 </html>
