--- a/Page1.html
+++ b/Page1.html
@@ -62,9 +62,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <h1>Page 1! ;D</h1>
-    <h2> Hoj Štěpo</h2>
+    
      This is a test!
-    <li>Test2!</li>
+    <li><h2>Test2!</h2></li>
     <li><a href="index.html">Home</a></li>
   </body>
 </html>
