--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
   </head>
   
-  <body background="Photo_1548590955178.png">
+  <body background="images/Photo_1548590955178.png">
    
     <header class="navbar-inverse">
       <div class="container">
@@ -46,7 +46,7 @@
                     <li><a href="index.html">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
+                    <li><a href="developers.html">Developers</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
