--- a/developers.html
+++ b/developers.html
@@ -1,6 +1,12 @@
 <Doctype html>
 
 <html>
-
+  <head>
+    <title> GodBot Developers</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    
+    <link href="styles/main.css" rel="stylesheet" />
+  </head>
 
 </html>
