--- a/developers.html
+++ b/developers.html
@@ -58,7 +58,13 @@
       </div>
     </header>
     
-    <div class="developers">
+      <div class="developers">
+        <div class="JustNela" id="JN">
+          <img scr="images/JustNela.jpg" alt="">
+      </div>
+      <div class="JustNela" id="JN">
+        <img scr="images/JustNela.jpg" alt="">
+      </div>
       <div class="JustNela" id="JN">
         <img scr="images/JustNela.jpg" alt="">
       </div>
