--- a/developers.html
+++ b/developers.html
@@ -57,7 +57,7 @@
         </nav>
       </div>
     </header>
-    
+      <h2>Hmmmmm</h2>
       <div class="developers">
         <div class="JustNela" id="JN">
           <img scr="images/JustNela.jpg" alt="">
@@ -75,6 +75,6 @@
     
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <h2>Hmmmm</h2>
+    <!--h2>Hmmmm</h2>
   </body>
 </html>
