--- a/developers.html
+++ b/developers.html
@@ -62,10 +62,10 @@
         <div class="JustNela" id="JN">
           <img scr="images/JustNela.jpg" alt="">
       </div>
-      <div class="JustNela" id="JN">
+      <div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
       </div>
-      <div class="JustNela" id="JN">
+      <div class="JustNela" id="Le">
         <img scr="images/JustNela.jpg" alt="">
       </div>
     </div>
