--- a/developers.html
+++ b/developers.html
@@ -62,12 +62,12 @@
         <div class="JustNela" id="JN">
           <img scr="images/JustNela.png" alt="">
       </div>
-      <div class="JustNela" id="JW">
+      <!-- div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
       </div>
       <div class="JustNela" id="Le">
         <img scr="images/JustNela.jpg" alt="">
-      </div>
+      </div -->
     </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
