--- a/developers.html
+++ b/developers.html
@@ -60,7 +60,7 @@
       <h2>Hmmmmm</h2>
       <div class="developers">
         <div class="JustNela" id="JN">
-          <img scr="images/JustNela.png" alt="">
+          <img scr="JustNela.png" alt="">
         </div>
       <!-- div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
