--- a/developers.html
+++ b/developers.html
@@ -59,8 +59,8 @@
     </header>
       <h2>Hmmmmm</h2>
       <div class="developers">
-        <div class="JustNela" id="JN">
-          <img src="images/JustNela.png" alt="">
+        <!--div class="JustNela" id="JN"-->
+          <img class="JN" src="images/JustNela.png" alt="">
         </div>
       <!-- div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
