--- a/developers.html
+++ b/developers.html
@@ -61,7 +61,7 @@
       <div class="developers">
         <!--div class="JustNela" id="JN"-->
           <img class="JN" src="images/JustNela.png" alt="">
-        </div>
+        <!--div-->
       <!-- div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
       </div>
