--- a/developers.html
+++ b/developers.html
@@ -57,11 +57,12 @@
         </nav>
       </div>
     </header>
-      <h2>Hmmmmm</h2>
+      <h2>JustNela</h2>
+      <h3>Main Developer </h3>
       <div class="developers">
-        <!--div class="JustNela" id="JN"-->
-          <img class="JN" src="images/JustNela.png" alt="JustNela">
-        <!--div-->
+        <div class="JN" id="JustNela">
+          <img src="images/JustNela.png" alt="JustNela">
+        </div>
       <!-- div class="JustNela" id="JW">
         <img scr="images/JustNela.jpg" alt="">
       </div>
