--- a/developers.html
+++ b/developers.html
@@ -60,7 +60,7 @@
       <h2>JustNela</h2>
       <h3>Main Developer </h3>
       <div class="developers">
-        <div class="JN" id="JustNela">
+        <div class="JN" id="JN">
           <img src="images/JustNela.png" alt="JustNela">
         </div>
       <!-- div class="JustNela" id="JW">
